implemented time trigger vertical
